--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>io.github</groupId>
     <artifactId>parseworks</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <developers>
         <developer>
             <id>jason bailey</id>
             <name>Jason Bailey</name>
-            <email></email>
+            <email>jason.bailey@24601.org</email>
             <url>https://github.com/newdeveloper</url>
         </developer>
     </developers>
