--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <scm>
         <connection>scm:git:git://github.com/parseworks/parseworks.git</connection>
-        <developerConnection>scm:git:https://github.com/parseworks/parseworks.git</developerConnection>
+        <developerConnection>scm:git:origin</developerConnection>
         <url>https://github.com/parseworks/parseworks/tree/main</url>
     </scm>
 
