--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,8 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>3.1.1</version>
                 <configuration>
+                    <autoResolveSnapshots>true</autoResolveSnapshots>
+                    <scmCommentPrefix>#42$</scmCommentPrefix>
                     <tagNameFormat>v@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
