minor updates and import clean up

--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
                         <additionalKOption>-Xdoclint:-html</additionalKOption>
                     </additionalJOptions>
                     <linksource>true</linksource>
-                    <source>${java.version}</source>
+                    <release>17</release>
                 </configuration>
                 <executions>
                     <execution>
