--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.parseworks</groupId>
     <artifactId>parseworks</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-ALPHA-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>
